# costocks-backend

./: .env.template  .gitignore  .pdm-python  .pypirc  Dockerfile  README.md  azure-pipeline-build.yml  azure-pipeline-push.yml  azure-pipelines-1.yml  azure-pipelines.yml  docker-compose.debug.yml  docker-compose.yml  package-lock.json  pyproject.toml  pyproject_template.py  requirements.txt  requirements_old.txt  secrets-google.json  secrets-tokens.json
app/: config.py  main.py
app/components/features/: Optimizers.py  _test_maximize_sharpe.py  _test_minimize_volatility.py  assign_weights.py  maximize_return.py  maximize_sharpe.py  minimize_volatility.py
app/components/interactions/: routes.py
app/components/producers/: __init__.py  fetch_data.py  worker.py
app/components/products/: __init__.py  effecient_frontier.py  maximum_return.py  maximum_sharpe.py  minimum_variance.py  preweighted.py
app/data/: _test.models.py  models.py
src/: app.py  client_secret.json  config.py  routes.py  secrets-firebase.json  secrets-google.json
src/Core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/components/: fetch_data_component.py  markets.py
src/components/html_elements/: sidebar_insight.py  sidebar_screener.py
src/components/plots/: Xplot_cummulatative_returns.py  plot_benchmark.py  plot_covariances.py  plot_cummulatative_returns.py  plot_effecient_frontier.py  plot_prices.py  plot_returns.py
src/static/: style.css
src/static/javascript/: js_index.js  js_insight.js
src/templates/: insight.html  simple.html
