[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Hansotto Kristiansen", email = "hansotto.kristiansen@gmail.com"},
]
dependencies = [
    "Core==0.1.6",
    "firebase-admin>=6.4.0",
    "Flask>=2.3.2",
    "Flask-Cors>=4.0.0",
    "pandas>=2.1.1",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "waitress>=2.1.2",
    "python-dotenv>=1.0.1",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "black>=23.10.1", 
]

[[tool.pdm.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/costocks/COSTOCKS/_packaging/artifacts-costocks/pypi/simple/"
username = "costock"
password = "***REMOVED***"




