[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Hansotto Kristiansen", email = "hansotto.kristiansen@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pandas>=2.2.3",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "typing-extensions>=4.12.2",
    "cvxopt>=1.3.2",
    "aiohttp>=3.10.1",
    "azure-cosmos>=4.7.0",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "black>=23.10.1", 
]

[[tool.pdm.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/costocks/COSTOCKS/_packaging/artifacts-costocks/pypi/simple/"
username = "costock"
password = "***REMOVED***"




